digits alignment fix

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -43,6 +43,7 @@
             
             display: flex;
             justify-content: center;
+            align-items: center;
             padding: 5px;
 
             transition: font-size 0.2s ease-in-out;
